Fix HTML entity encoding in index.html

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ I build modern, fast, and responsive websites that deliver great user experience
 
 </div>
 
-<img src="Logo.jpg">
+<img src="https://i.postimg.cc/VLNGKtCJ/Logo.jpg">
 
 </div>
 
@@ -347,4 +347,5 @@ type();
 </script>
 
 </body>
+
 </html>
