--- a/index.html
+++ b/index.html
@@ -273,18 +273,21 @@ I build modern, fast, and responsive websites that deliver great user experience
 <div class="card">
 <h3>Jamali.pk</h3>
 <p>Modern ecommerce style website.</p>
+  <p>Coming Soon....</p>
 <a href="#">View Project →</a>
 </div>
 
 <div class="card">
 <h3>Portfolio Website</h3>
 <p>Personal developer portfolio.</p>
+  <p>Coming Soon....</p>
 <a href="#">View Project →</a>
 </div>
 
 <div class="card">
 <h3>Business Landing Page</h3>
 <p>High converting landing page.</p>
+  <p>Coming Soon....</p>
 <a href="#">View Project →</a>
 </div>
 
@@ -349,3 +352,4 @@ type();
 </body>
 
 </html>
+
