--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ display:none;
 
 <div class="typing" id="typing"></div>
 
-<button class="btn"><a href="https://i.postimg.cc/pdn9XvnP/Shah-Muhammad-CV.jpg">Download CV</a></button>
+<button class="btn"><a href="https://shahmuhmmad100.wapka.site/">View CV</a></button>
 
 </div>
 
@@ -352,5 +352,6 @@ type();
 </body>
 
 </html>
+
 
 
