--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@ background:#020617;
 border:1px solid rgba(255,255,255,0.1);
 border-radius:10px;
 }
+  a{text-deacoration:none;}
 
 /* PROJECTS */
 
@@ -352,6 +353,7 @@ type();
 </body>
 
 </html>
+
 
 
 
