Fix HTML formatting and improve styles

--- a/index.html
+++ b/index.html
@@ -142,7 +142,26 @@ background:#020617;
 border:1px solid rgba(255,255,255,0.1);
 border-radius:10px;
 }
-  a{text-deacoration:none;}
+  a:link {
+  color: green;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:visited {
+  color: pink;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:hover {
+  color: red;
+  background-color: transparent;
+  text-decoration: underline;
+}
+a:active {
+  color: yellow;
+  background-color: transparent;
+  text-decoration: underline;
+}
 
 /* PROJECTS */
 
@@ -353,6 +372,7 @@ type();
 </body>
 
 </html>
+
 
 
 
