--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ border-radius:10px;
   text-decoration: none;
 }
 a:visited {
-  color: pink;
+  color: black;
   background-color: transparent;
   text-decoration: none;
 }
@@ -372,6 +372,7 @@ type();
 </body>
 
 </html>
+
 
 
 
