--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ a:visited {
   text-decoration: none;
 }
 a:hover {
-  color: red;
+  color: black;
   background-color: transparent;
   text-decoration: underline;
 }
@@ -372,6 +372,7 @@ type();
 </body>
 
 </html>
+
 
 
 
